This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance, for the stable release version
============================================================================
10/10/22: Fixed missing line break after last FEI ZLP shift in short term
calibrations (In 4.0).

10/9/22: Explicitly turned off emission before flashing FEG on JEOL to make it
ramp down better (In 4.0).

10/8/22: SEM_4-0-14
10/8/22: Changed installer to clean up all files added by installing a new 4.1
build (In 4.0).

10/8/22: Fixed vulnerability in drawing routine that probably caused crash (In
4.0).

110/8/22: Started saving shifts from Shift to Marker in settings and added a
list box to allow removing shifts.

0/8/22: Disabled all radio buttons about saving shifts when no saving is
possible in Shift to Marker dialog (In 4.0).

11/7/22: Switched distribution to being built with Visual C++ 2015 tools.
SerialEM will no longer run directly on Windows 2000 and XP SP1 or SP2 but has
to be run on a separate computer connecting to FEI-SEMserver on the scope
computer.   A Visual C++ 2015 redistributable package must be installed to run
on Windows XP SP 3.

11/1/22: Added script commands ImageMarkerPosition, GetNavGroupStageCoords,
GetNavGroupImageCoords, LoadSettingsFile, and SetupFullMontage.

11/1/22: Added task to Acquire at Items to run hole finder and combiner after
acquiring a map.

10/31/22: Set flag to force an autofocus after taking or aligning to
dose-symmetric anchor (In 4.0).

10/29/22: Added camera property to specify readout interval for individual
Falcon cameras and made changes so that no property entries should be needed
if there is a Falcon 3 and 4 with standard intervals.

10/29/22: Fixed writing of full tilt series alignframes command file and
copying of the mdoc file for Falcon 3/4.  Also added pixel size to the command