@@ -72,6 +72,7 @@ INT_PROP_TEST("SetModeInFalconConfig", camera->, CanUseFalconConfig)
 INT_PROP_TEST("RotFlipInFalcon3ComFile", camera->, RotFlipInFalcon3ComFile)
 BOOL_PROP_TEST("SubdirsOkInFalcon3Save", camera->, SubdirsOkInFalcon3Save)
 BOOL_PROP_TEST("Falcon4CanSaveEER", camera->, CanSaveEERformat)
+BOOL_PROP_TEST("TakeUnbinnedIfSavingEER", camera->, TakeUnbinnedIfSavingEER)
 FLOAT_PROP_TEST("DEPrevSetNameTimeout", camera->, DEPrevSetNameTimeout)
 BOOL_PROP_TEST("WarnIfBeamNotOn", camera->, WarnIfBeamNotOn)
 FLOAT_PROP_TEST("InnerXRayBorderDistance", mWinApp->mProcessImage->, InnerXRayDistance)
