@@ -422,6 +422,7 @@ CSerialEMApp::CSerialEMApp()
     mCamParams[i].addToExposure = -999.;
     mCamParams[i].falcon3ScalePower = 4;
     mCamParams[i].falconEventScaling = 0.;
+    mCamParams[i].falconVariant = 0;
     mCamParams[i].linear2CountingRatio = 8.;
     mCamParams[i].linearOffset = 0.;
     mCamParams[i].K3CDSLinearRatio = 1.5f;
